# game-of-life

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: push_main.yml
frontend/: next.config.js  package.json
frontend/src/components/: canvasLife.tsx  life.tsx  textLife.tsx  webGlLife.tsx
frontend/src/pages/: canvas.tsx  index.tsx  webgl.tsx
frontend/src/styles/: Home.module.css
ts-game-of-life/: babel.config.js  package.json  tsconfig.json  vitest.config.ts
ts-game-of-life/src/: cell.ts  grid.ts  index.ts  universe.ts
ts-game-of-life/src/__tests__/: grid.test.ts  universe.test.ts
wasm-game-of-life/: Cargo.toml
wasm-game-of-life/benches/: universe.rs
wasm-game-of-life/src/: cell.rs  errors.rs  example-universe.txt  grid.rs  lib.rs  main.rs  universe.rs
wasm-game-of-life/src/rendering/: canvas.rs  mod.rs  text.rs
wasm-game-of-life/src/rendering/web_gl/: fragment_shader.glsl  mod.rs  vertex_shader.glsl
