[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "universe"
harness = false
